# public/docs/openapi.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.3
 info:
-  title: Laravel
+  title: Optivote
   description: ''
   version: 1.0.0
 servers:
@@ -96,7 +96,7 @@ paths:
                 password:
                   type: string
                   description: 'The password for the new account. Minimum length: 8 characters.'
-                  example: .B%LFVr\pl
+                  example: '^)mfH0Q{'
                   nullable: false
               required:
                 - npi
@@ -167,7 +167,7 @@ paths:
                 password:
                   type: string
                   description: 'The password of the user.'
-                  example: 'CRo,p;btgiXM#7p~BeU'
+                  example: ')x/k2f)/9*\m{'
                   nullable: false
               required:
                 - email
@@ -216,6 +216,152 @@ paths:
                   nullable: false
               required:
                 - npi
+      security: []
+  /api/password/send-otp:
+    post:
+      summary: 'Send reset password Otp.'
+      operationId: sendResetPasswordOtp
+      description: 'This endpoint send reset password Otp to user email.'
+      parameters: []
+      responses:
+        200:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  success: true
+                  message: 'OTP de réinitialisation de mot de passe envoyé avec succès'
+                  body: null
+                properties:
+                  success:
+                    type: boolean
+                    example: true
+                  message:
+                    type: string
+                    example: 'OTP de réinitialisation de mot de passe envoyé avec succès'
+                  body:
+                    type: string
+                    example: null
+      tags:
+        - Authentication
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                  description: 'The email address of the user.'
+                  example: user@example.com
+                  nullable: false
+              required:
+                - email
+      security: []
+  /api/password/reset:
+    post:
+      summary: 'Reset password.'
+      operationId: resetPassword
+      description: 'This endpoint reset user password.'
+      parameters: []
+      responses:
+        200:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  success: true
+                  message: 'Mot de passe réinitialisé avec succès'
+                  body: null
+                properties:
+                  success:
+                    type: boolean
+                    example: true
+                  message:
+                    type: string
+                    example: 'Mot de passe réinitialisé avec succès'
+                  body:
+                    type: string
+                    example: null
+        400:
+          description: ''
+          content:
+            application/json:
+              schema:
+                oneOf:
+                  -
+                    description: ''
+                    type: object
+                    example:
+                      success: false
+                      message: 'OTP invalide ou expiré.'
+                      body: null
+                    properties:
+                      success:
+                        type: boolean
+                        example: false
+                      message:
+                        type: string
+                        example: 'OTP invalide ou expiré.'
+                      body:
+                        type: string
+                        example: null
+                  -
+                    description: ''
+                    type: object
+                    example:
+                      success: false
+                      message: 'OTP expiré.'
+                      body: null
+                    properties:
+                      success:
+                        type: boolean
+                        example: false
+                      message:
+                        type: string
+                        example: 'OTP expiré.'
+                      body:
+                        type: string
+                        example: null
+      tags:
+        - Authentication
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                  description: 'The email address of the user.'
+                  example: user@example.com
+                  nullable: false
+                otp:
+                  type: numeric
+                  description: ''
+                  example: deserunt
+                  nullable: false
+                password:
+                  type: string
+                  description: 'minimum six characters'
+                  example: 's@D|\*:}6SSu,xTC@'
+                  nullable: false
+                password_confirmation:
+                  type: string
+                  description: 'equal to password'
+                  example: consequuntur
+                  nullable: false
+              required:
+                - email
+                - otp
+                - password
+                - password_confirmation
       security: []
   '/api/candidats/{election_id}':
     get:
@@ -1369,7 +1515,7 @@ paths:
                 start_date:
                   type: string
                   description: 'Must be a valid date.'
-                  example: '2025-01-05T14:30:09'
+                  example: '2025-01-07T21:20:49'
                   nullable: false
                 end_date:
                   type: date
@@ -1496,7 +1642,7 @@ paths:
         in: path
         name: election_id
         description: "L'ID de l'élection dont on veut les résultats. Exemple : 1"
-        example: 4
+        example: 18
         required: true
         schema:
           type: integer
@@ -1744,7 +1890,7 @@ paths:
                 user_id:
                   type: integer
                   description: 'The <code>id</code> of an existing record in the users table.'
-                  example: 11
+                  example: 9
                   nullable: false
                 candidat_id:
                   type: integer
